Add configuration options for content mapping and default tags
This commit introduces configuration options for mapping categories (articles, books, tweets, podcasts) to custom values and tagging imported items.
These changes enable customization of the content mapping and tagging to suit the users' needs, for example, in different languages or organizational systems. Mapping and tags are defined in the README and controlled via environment variables.

resolves #1

--- a/README.adoc
+++ b/README.adoc
@@ -48,6 +48,12 @@ NOTION_SYNC_ID=database property name ?? memai-sync-id
 NOTION_SYNC_STATUS=database property name ?? memai-sync-status
 NOTION_LAST_SYNC=database property name ?? memai-last-sync
 CRON_SCHEDULE=schedule of exporter-run ?? */15 * * * *
+
+MAPPING_ARTICLES=convert 'Articles' to ?? article
+MAPPING_BOOKS=convert 'Books' to ?? book
+MAPPING_TWEETS=convert 'Tweets' to ?? tweet
+MAPPING_PODCASTS=convert 'Podcasts' to ?? podcast
+DEFAULT_TAGS=tags for each imported item ?? #readwise-import
 ----
 
 == Installation
